# neutronpy

./: .codeclimate.yml  .deploy_anaconda.sh  .gitignore  .gitmodules  .travis.yml  LICENSE.KAPTEYN  LICENSE.MPFIT.txt  LICENSE.RESLIB.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  conf.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
conda-recipe/: meta.yaml
doc/: Makefile  changelog.rst  conf.py  contact.rst  development.rst  examples.rst  index.rst  installation.rst  make.bat  neutronpy.constants.rst  neutronpy.fitting.rst  neutronpy.form_facs.rst  neutronpy.functions.rst  neutronpy.resolution.rst  neutronpy.rst  neutronpy.tools.rst  notebooks.rst  reference.rst  roadmap.rst  troubleshooting.rst  tutorials.rst
neutronpy/: __init__.py  atom.py  constants.py  core.py  data.py  energy.py  exceptions.py  form_facs.py  functions.py  goniometer.py  gui.py  instrument.py  instrument_tools.py  io.py  lattice.py  logger.py  material.py  models.py  plot.py  polarimetry.py  polarization.py  resolution.py  sample.py  scattering.py  spurion.py  structure_factor.py  structure_factors.py  symmetry.py  tools.py
src/: LICENSE.txt  kmpfit.c  kmpfit.pxd  kmpfit.pyx  mpfit.h
tests/: scan0007.bt7  test.cfg  test.par  test2.cfg  test2.par  test_core.py  test_data.py  test_energy.py  test_fitting.py  test_form_fac.py  test_form_facs.py  test_functions.py  test_io.py  test_lattice.py  test_models.py  test_resolution.py  test_resolution_tas.py  test_resolution_tof.py  test_scans.py  test_scattering.py  test_spurion.py  test_structure_factors.py  test_symmetry.py  test_tools.py
(+152 files in other folders)
